@@ -1,4 +1,5 @@
 {
     "install": "messages/install.txt",
-    "2.2.1": "messages/2.2.1.txt"
+    "2.2.1": "messages/2.2.1.txt",
+    "2.2.2": "messages/2.2.2.txt"
 }
